correção bug que não alterava para genero quando possuia algo escrito no searchBar.  Melhoria scrollbar

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -37,7 +37,7 @@ body {
 }
 
 .custom-scrollbar::-webkit-scrollbar {
-  width: 4px;
+  width: 6px;
 }
 
 .custom-scrollbar::-webkit-scrollbar-track {
@@ -45,10 +45,10 @@ body {
 }
 
 .custom-scrollbar::-webkit-scrollbar-thumb {
-  background: rgba(255, 255, 255, 0.05);
+  background: #ffffff26;
   border-radius: 10px;
 }
 
 .custom-scrollbar:hover::-webkit-scrollbar-thumb {
-  background: rgba(255, 255, 255, 0.15);
+  background: #ffffff26;
 }
